fixed spacing on DJ list

--- a/public/css/radio.css
+++ b/public/css/radio.css
@@ -6,20 +6,29 @@
 
 .djList {
   text-align: center;
+  width: 100%;
 }
 
 .djTile {
   width: 150px;
-  height: 220px;
+  height: 150px;
   display: inline-block;
-  text-align: center;
   margin: 1%;
-  transition: box-shadow 0.5s;
-  overflow: hidden;
+  position: relative;
 }
 
 .djTile:hover > .djTileInfo{
   text-shadow: 0px 0px 6px rgba(255,255,255,0.7);
+}
+
+.djTileOverlay:hover{
+  opacity: 0.8;
+}
+
+.djName{
+  max-width: 145px;
+  line-height: 150px;
+  vertical-align: middle;
 }
 
 .djTileInfo {
@@ -27,4 +36,16 @@
   display: block;
   padding: 5%;
   margin-top: -10px;
+}
+
+.djTileOverlay{
+  width: 150px;
+  height: 150px;
+  z-index: 1;
+  border-radius: 50%;
+  background-color: white;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
